# soya-rs

./: Cargo.toml  README.md
soya/: Cargo.toml
soya-derive/: Cargo.toml
soya-derive/src/: config.rs  gen.rs  lib.rs
soya-derive/src/config/: soya.rs
soya/src/: err.rs  field.rs  infer.rs  lib.rs  opt.rs  value.rs
test1/: Cargo.toml
test1/src/: main.rs
test2/: Cargo.toml
test2/src/: main.rs
